an element at a time.  (No resizing of matrices or accessing
neighboring elements, as permitted in pcomb.)  It saves memory
over rmtxop by operating on a row at a time, so can handle
input and output matrices with any number of rows.  It does
provide for a single matrix-multiplication operation at the end,
which only requires memory for that final matrix.

Added support for filtering hyperspectral images to pfilt.

Added support for 1- and 3-component float matrix i/o to
pcomb to allow for better interoperability.

Added support for -co+ option to rtpict, so it can directly
produce hyperspectral images.

Added new "specdata" and "specpict" primitives to support
interpolated spectral data files and hyperspectral images
as patterns.

Added support for multispectal sampling in rsensor, which will
put out as many color channels as specified in any -cs option
(default is 3 for RGB).

Added ability of mgf2rad to convert spectral data at least
for light, glow, plastic, and metal primitive types.  Need
to use new '-s' option to get new output.

Added handling of spectral images to rcode2bmp script.

Minor change to rcollate to allow explicit byte records to
be any specified length without checks against header input.

Added new hemisphere type to rfluxmtx, "h=cie" for CIE sky
scanner positions.  These are 145 patches with identical
row counts to Tregenza, but starting from a different
azimuth and reversing row directions at adjacent altitudes.

Added optimization for long argument lists and arrays in
the calcomp routines used for rendering and in rcalc, etc.

Added error estimate spreading to ambient super-sampling
algorithm (-as) to improve performance especially in
scenes with sharp cut-offs.

Added -i option to gendaymtx to match -i option of gendaylit.
Thanks to Yongqing for initial implementation.

Changed rcrop so negative #rows or #cols counts back from end.

Added rcomb -n option for multi-processing of very large matrices.